welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:2: error: identifier expected but '(' found.
def (growFlowers()){
    ^