welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def (growFlowers()){

def fairF(c:Color){
	setCouleurBrosse(Color.YELLOW);
	avance();
	baisseBrosse();
	leveBrosse();
	for(x<-1 to 4){
	gauche();
	recule();
	setCouleurBrosse(c);
	baisseBrosse();
	leveBrosse();
	}
	
}
fairF(Color.RED);
}
